src/objects/aTCU_DS_II_ADOL__c.object
<CustomObject>
    <description>TCU Drug Screen ii ADOLESCENT</description>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>TCUV_ADOL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCU_Q01_Longer_more_drugs_than_intended__c</fullName>
        <label>TCU Q01 Longer/more drugs than intended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q02_Try_to_cut_down__c</fullName>
        <label>TCU Q02 Try to cut down?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q03_Spend_a_lot_of_time__c</fullName>
        <label>TCU Q03 Spend a lot of time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q04a_Kept_you_from_doing_work_school__c</fullName>
        <label>TCU Q04a Kept you from doing work/school</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q04b_Caused_an_accident__c</fullName>
        <label>TCU Q04b Caused an accident</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q05_Spend_less_time_at_work__c</fullName>
        <label>TCU Q05 Spend less time at work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q06a_Emotional_and_psych_problems__c</fullName>
        <label>TCU Q06a Emotional and psych problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q06b_Problems_w_family_friends_work__c</fullName>
        <label>TCU Q06b Problems w/ family/friends/work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q06c_physical_or_medical_problems__c</fullName>
        <label>TCU Q06c physical or medical problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q07_Increase_drug_amount__c</fullName>
        <label>TCU Q07 Increase drug amount?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q08_Took_drugs_to_avoid_withdrawal__c</fullName>
        <label>TCU Q08 Took drugs to avoid withdrawal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q09_Get_sick_when_quitting__c</fullName>
        <label>TCU Q09 Get sick when quitting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q10_Most_problematic_drug__c</fullName>
        <label>TCU Q10 Most problematic drug</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana/Hashish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens//PCP/Psychedelics/Mushrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack/Freebase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroin and Cocaine (mixed together as Speedball)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine (by itself)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroin (by itself)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street methadone (non-prescription)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Opiates/Opium/Morphine/Demerol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methamphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines (other uppers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tranquilizers/Barbiturates/Sedatives (downers)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11a_Alcohol__c</fullName>
        <label>TCU Q11a Alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>about every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11b_Marijuana__c</fullName>
        <label>TCU Q11b Marijuana</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11c_Hallucinogens__c</fullName>
        <label>TCU Q11c Hallucinogens</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11d_Inhalants__c</fullName>
        <label>TCU Q11d Inhalants</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11e_Crack__c</fullName>
        <label>TCU Q11e Crack</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11f_Speedball__c</fullName>
        <label>TCU Q11f Speedball</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11g_Cocaine__c</fullName>
        <label>TCU Q11g Cocaine</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11h_Heroin__c</fullName>
        <label>TCU Q11h Heroin</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11i_Methadone__c</fullName>
        <label>TCU Q11i Methadone</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11j_Other_opiates__c</fullName>
        <label>TCU Q11j Other opiates</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11k_Methamphetamine__c</fullName>
        <label>TCU Q11k Methamphetamine</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11l_Amphetamines__c</fullName>
        <label>TCU Q11l Amphetamines</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11m_Barbiturates__c</fullName>
        <label>TCU Q11m Tranquilizers</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q11n_Other_drugs__c</fullName>
        <label>TCU Q11n Other drugs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCU_Q11n_Other_drugs_frequency__c</fullName>
        <label>TCU Q11n Other drugs frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About every day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q12_How_often_did_you_inject__c</fullName>
        <label>TCU Q12 How often did you inject?</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only a few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 times per month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 times per week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q13_How_serious_are_your_problems__c</fullName>
        <label>TCU Q13 How serious are your problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considerably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q14_Number_of_times_in_treatment__c</fullName>
        <label>TCU Q14 Number of times in treatment?</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or more items</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Q15_How_important_to_get_treatment__c</fullName>
        <label>TCU Q15 How important to get treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considerably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCU_Total_Score__c</fullName>
        <formula>if(ispickval( TCU_Q01_Longer_more_drugs_than_intended__c ,&quot;Yes&quot;), 1, 0) + 
if(ispickval( TCU_Q02_Try_to_cut_down__c ,&quot;Yes&quot;), 1, 0) + 
if(ispickval( TCU_Q03_Spend_a_lot_of_time__c ,&quot;Yes&quot;), 1, 0) + 

if(or(ispickval( TCU_Q04a_Kept_you_from_doing_work_school__c ,&quot;Yes&quot;), ispickval( TCU_Q04b_Caused_an_accident__c ,&quot;Yes&quot;)), 1, 0) + 

if(ispickval( TCU_Q05_Spend_less_time_at_work__c ,&quot;Yes&quot;), 1, 0) + 

if(or(ispickval( TCU_Q06a_Emotional_and_psych_problems__c ,&quot;Yes&quot;), ispickval( TCU_Q06b_Problems_w_family_friends_work__c ,&quot;Yes&quot;), ispickval( TCU_Q06c_physical_or_medical_problems__c ,&quot;Yes&quot;)), 1, 0) + 

if(ispickval( TCU_Q07_Increase_drug_amount__c ,&quot;Yes&quot;), 1, 0) + 
if(ispickval( TCU_Q08_Took_drugs_to_avoid_withdrawal__c ,&quot;Yes&quot;), 1, 0) + 
if(ispickval( TCU_Q09_Get_sick_when_quitting__c ,&quot;Yes&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCU Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>aTCU DS II ADOL</label>
    <nameField>
        <label>aTCU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aTCU DS II ADOL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>